Fixes bug where too tall Hud bleeds over the top bar color.

--- a/src/css/Hud.css
+++ b/src/css/Hud.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-shrink: 1;
     flex-grow: 0;
+    background-color: tan;
 }
 
 .Hud.Hud_panel {
